<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="CETA_OUT_bits_t" Id="{e32073c4-20c1-40c9-ae7e-779421b0f93a}">
    <Declaration><![CDATA[TYPE CETA_OUT_bits_t :
STRUCT
    start_stop                    : BIT; // start / stop (stop resets the device)
    send_parameters               : BIT; // send parameters
    request_parameters            : BIT; // request parameters
    request_error_code            : BIT; // request error code
    change_front_panel_lock_state : BIT; // change front panel lock state
    assign_program_number         : BIT; // assign program number
    request_system_information    : BIT; // request system information
    request_cycle_counter         : BIT; // request cycle counter
    reset_error_bit               : BIT; // reset error bit
    res_b9                        : BIT; // res_b9
    res_b10                       : BIT; // res_b10
    request_next_result_block     : BIT; // request next result block
    res_b12                       : BIT; // res_b12
    res_b13                       : BIT; // res_b13
    res_b14                       : BIT; // res_b14
    res_b15                       : BIT; // res_b15
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>